add some frontend code

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,7 +7,7 @@ html, body {
 
 /* override bootstrap button styles */
 .btn {
-  padding: .6em 1em;
+  padding: 0.3em 1em;
   border: none;
   border-radius: 0.1rem;
   color: #FDFFFC;
@@ -84,72 +84,11 @@ iframe {
   outline: none !important;
 }
 
-/* styles here are used for both sign up and sign in page */
-
-.auth-box {
-  background-color: #FDFFFC;
-  height: 25rem;
-  border-radius: 8px;
-  margin-top: 10rem;
-  box-shadow: 1px 1px 6px #E9ECEF;
+/* style for submit media modal */
+.modal-footer .btn-secondary:hover {
+  background: #E71D36;
 }
 
-@media (min-width: 768px) {
-  .auth-box {
-    margin: 0 auto;
-    margin-top: 9rem;
-  }
-
-  /* sign up page style */
-  .auth-box.sign-up {
-    margin-top: 6rem;
-  }
-}
-
-.auth-box h3 {
-  font-size: 24px;
+.modal-header h5 {
   font-weight: 200;
-  line-height: 1.1;
-  color: #011627;
 }
-
-input[type=text], input[type=email], input[type=password] {
-  font-weight: 200 !important;
-}
-
-.auth-box-footer {
-  width: 100%;
-  background: whitesmoke;
-  height: 4rem;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  border-bottom-left-radius: 8px;
-  border-bottom-right-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-top: 1px solid #ececec;
-  font-weight: 200;
-  text-decoration: none;
-  color: #011627;
-}
-
-.auth-box-footer:hover {
-  text-decoration: none;
-  color: #011627;  
-}
-
-.auth-box-footer span {
-  text-decoration: none;
-  color: #E71D36;
-}
-
-
-/* sign up style */
-.auth-box.sign-up {
-  height: 31rem;
-}
-
-
